fix button spacing on RTL

--- a/apps/src/templates/instructions/hint-prompt.module.scss
+++ b/apps/src/templates/instructions/hint-prompt.module.scss
@@ -1,6 +1,6 @@
 .button {
   border: 2px solid black;
   &Yes {
-    margin-right: 5px;
+    margin-inline-end: 8px;
   }
 }
